{
  "version": 4,
  "terraform_version": "0.14.11",
  "serial": 79,
  "lineage": "47c8c739-dcd8-a14f-510f-edfe4805ab69",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "aws_default_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:366187108546:subnet/subnet-5789672a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-5789672a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "366187108546",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "archUUID": "c3cbd410-a565-4d33-bfd0-4e81e45e61f7",
              "env": "Production"
            },
            "tags_all": {
              "archUUID": "c3cbd410-a565-4d33-bfd0-4e81e45e61f7",
              "env": "Production"
            },
            "vpc_id": "vpc-c677fead"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "aws_default_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:366187108546:subnet/subnet-5c9ec810",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-5c9ec810",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "366187108546",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "archUUID": "c3cbd410-a565-4d33-bfd0-4e81e45e61f7",
              "env": "Production"
            },
            "tags_all": {
              "archUUID": "c3cbd410-a565-4d33-bfd0-4e81e45e61f7",
              "env": "Production"
            },
            "vpc_id": "vpc-c677fead"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "aws_default_vpc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:366187108546:vpc/vpc-c677fead",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-842255ef",
            "default_route_table_id": "rtb-992879f2",
            "default_security_group_id": "sg-578bdd22",
            "dhcp_options_id": "dopt-6046240b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-c677fead",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-992879f2",
            "owner_id": "366187108546",
            "tags": {
              "archUUID": "c3cbd410-a565-4d33-bfd0-4e81e45e61f7",
              "env": "Production"
            },
            "tags_all": {
              "archUUID": "c3cbd410-a565-4d33-bfd0-4e81e45e61f7",
              "env": "Production"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "m5_24",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c6a6b0e75b2b6ce7",
            "arn": "arn:aws:ec2:us-east-2:366187108546:instance/i-093552bb007d65810",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-093552bb007d65810",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "braibboard",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07d2d2e6ea0814978",
            "private_dns": "ip-172-31-39-255.us-east-2.compute.internal",
            "private_ip": "172.31.39.255",
            "public_dns": "ec2-18-221-95-10.us-east-2.compute.amazonaws.com",
            "public_ip": "18.221.95.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01d16f8eb710b41ed",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20220501152542929900000004"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-5c9ec810",
            "tags": {
              "archUUID": "c3cbd410-a565-4d33-bfd0-4e81e45e61f7",
              "env": "Production"
            },
            "tags_all": {
              "archUUID": "c3cbd410-a565-4d33-bfd0-4e81e45e61f7",
              "env": "Production"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09252c863360995a9"
            ]
          },
          "dependencies": [
            "aws_security_group.aws_security_group_8"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb_25",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:366187108546:loadbalancer/app/tf-lb-2022050115254578900000000c/783acb29ba0ad789",
            "arn_suffix": "app/tf-lb-2022050115254578900000000c/783acb29ba0ad789",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-2022050115254578900000000c-524590873.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:366187108546:loadbalancer/app/tf-lb-2022050115254578900000000c/783acb29ba0ad789",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-2022050115254578900000000c",
            "security_groups": [
              "sg-001db4e6d33fb4ae7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-5789672a"
              },
              {
                "subnet_id": "subnet-5c9ec810"
              }
            ],
            "subnets": [
              "subnet-5789672a",
              "subnet-5c9ec810"
            ],
            "tags": {
              "archUUID": "c3cbd410-a565-4d33-bfd0-4e81e45e61f7",
              "env": "Production"
            },
            "tags_all": {
              "archUUID": "c3cbd410-a565-4d33-bfd0-4e81e45e61f7",
              "env": "Production"
            },
            "vpc_id": "vpc-c677fead",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_default_subnet.aws_default_subnet_2",
            "aws_default_subnet.aws_default_subnet_3",
            "aws_security_group.aws_security_group_4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb_30",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:366187108546:loadbalancer/app/tf-lb-2022050115254569520000000b/7d706053c701af3a",
            "arn_suffix": "app/tf-lb-2022050115254569520000000b/7d706053c701af3a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-2022050115254569520000000b-1426265915.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:366187108546:loadbalancer/app/tf-lb-2022050115254569520000000b/7d706053c701af3a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-2022050115254569520000000b",
            "security_groups": [
              "sg-060203cbd3cdfd4b7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-5789672a"
              },
              {
                "subnet_id": "subnet-5c9ec810"
              }
            ],
            "subnets": [
              "subnet-5789672a",
              "subnet-5c9ec810"
            ],
            "tags": {
              "archUUID": "c3cbd410-a565-4d33-bfd0-4e81e45e61f7",
              "env": "Production"
            },
            "tags_all": {
              "archUUID": "c3cbd410-a565-4d33-bfd0-4e81e45e61f7",
              "env": "Production"
            },
            "vpc_id": "vpc-c677fead",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_default_subnet.aws_default_subnet_2",
            "aws_default_subnet.aws_default_subnet_3",
            "aws_security_group.aws_security_group_13"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "aws_lb_listener_26",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:366187108546:listener/app/tf-lb-2022050115254578900000000c/783acb29ba0ad789/aed16879f9bff1ba",
            "certificate_arn": "arn:aws:acm:us-east-2:366187108546:certificate/d2c0f434-ce30-4932-a59b-993d8d2848df",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:366187108546:targetgroup/tf-2022050115254637560000000d/08f1cce41781191d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:366187108546:listener/app/tf-lb-2022050115254578900000000c/783acb29ba0ad789/aed16879f9bff1ba",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:366187108546:loadbalancer/app/tf-lb-2022050115254578900000000c/783acb29ba0ad789",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {
              "archUUID": "c3cbd410-a565-4d33-bfd0-4e81e45e61f7",
              "env": "Production"
            },
            "tags_all": {
              "archUUID": "c3cbd410-a565-4d33-bfd0-4e81e45e61f7",
              "env": "Production"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb_25",
            "aws_lb_target_group.aws_lb_target_group_27"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "aws_lb_listener_31",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:366187108546:listener/app/tf-lb-2022050115254569520000000b/7d706053c701af3a/6024dc9b3db48d53",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:366187108546:targetgroup/tf-2022050115254639230000000f/5e7b4d1ebc55422c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:366187108546:listener/app/tf-lb-2022050115254569520000000b/7d706053c701af3a/6024dc9b3db48d53",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:366187108546:loadbalancer/app/tf-lb-2022050115254569520000000b/7d706053c701af3a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "archUUID": "c3cbd410-a565-4d33-bfd0-4e81e45e61f7",
              "env": "Production"
            },
            "tags_all": {
              "archUUID": "c3cbd410-a565-4d33-bfd0-4e81e45e61f7",
              "env": "Production"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb_30",
            "aws_lb_target_group.aws_lb_target_group_37"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "aws_lb_listener_32",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:366187108546:listener/app/tf-lb-2022050115254569520000000b/7d706053c701af3a/086d1d02aeb282dc",
            "certificate_arn": "arn:aws:acm:us-east-2:366187108546:certificate/d2c0f434-ce30-4932-a59b-993d8d2848df",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:366187108546:targetgroup/tf-2022050115254638670000000e/4d019c806cf6322e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:366187108546:listener/app/tf-lb-2022050115254569520000000b/7d706053c701af3a/086d1d02aeb282dc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:366187108546:loadbalancer/app/tf-lb-2022050115254569520000000b/7d706053c701af3a",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {
              "archUUID": "c3cbd410-a565-4d33-bfd0-4e81e45e61f7",
              "env": "Production"
            },
            "tags_all": {
              "archUUID": "c3cbd410-a565-4d33-bfd0-4e81e45e61f7",
              "env": "Production"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb_30",
            "aws_lb_target_group.aws_lb_target_group_36"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "aws_lb_target_group_27",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:366187108546:targetgroup/tf-2022050115254637560000000d/08f1cce41781191d",
            "arn_suffix": "targetgroup/tf-2022050115254637560000000d/08f1cce41781191d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:366187108546:targetgroup/tf-2022050115254637560000000d/08f1cce41781191d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-2022050115254637560000000d",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "archUUID": "c3cbd410-a565-4d33-bfd0-4e81e45e61f7",
              "env": "Production"
            },
            "tags_all": {
              "archUUID": "c3cbd410-a565-4d33-bfd0-4e81e45e61f7",
              "env": "Production"
            },
            "target_type": "instance",
            "vpc_id": "vpc-c677fead"
          },
          "dependencies": [
            "aws_default_vpc.aws_default_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "aws_lb_target_group_36",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:366187108546:targetgroup/tf-2022050115254638670000000e/4d019c806cf6322e",
            "arn_suffix": "targetgroup/tf-2022050115254638670000000e/4d019c806cf6322e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:366187108546:targetgroup/tf-2022050115254638670000000e/4d019c806cf6322e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-2022050115254638670000000e",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "archUUID": "c3cbd410-a565-4d33-bfd0-4e81e45e61f7",
              "env": "Production"
            },
            "tags_all": {
              "archUUID": "c3cbd410-a565-4d33-bfd0-4e81e45e61f7",
              "env": "Production"
            },
            "target_type": "instance",
            "vpc_id": "vpc-c677fead"
          },
          "dependencies": [
            "aws_default_vpc.aws_default_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "aws_lb_target_group_37",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:366187108546:targetgroup/tf-2022050115254639230000000f/5e7b4d1ebc55422c",
            "arn_suffix": "targetgroup/tf-2022050115254639230000000f/5e7b4d1ebc55422c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:366187108546:targetgroup/tf-2022050115254639230000000f/5e7b4d1ebc55422c",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-2022050115254639230000000f",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "archUUID": "c3cbd410-a565-4d33-bfd0-4e81e45e61f7",
              "env": "Production"
            },
            "tags_all": {
              "archUUID": "c3cbd410-a565-4d33-bfd0-4e81e45e61f7",
              "env": "Production"
            },
            "target_type": "instance",
            "vpc_id": "vpc-c677fead"
          },
          "dependencies": [
            "aws_default_vpc.aws_default_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "aws_lb_target_group_attachment_28",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:366187108546:targetgroup/tf-2022050115254637560000000d/08f1cce41781191d-20220501152558258200000010",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:366187108546:targetgroup/tf-2022050115254637560000000d/08f1cce41781191d",
            "target_id": "i-093552bb007d65810"
          },
          "dependencies": [
            "aws_default_vpc.aws_default_vpc_1",
            "aws_instance.m5_24",
            "aws_lb_target_group.aws_lb_target_group_27",
            "aws_security_group.aws_security_group_8"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws_security_group_11",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:366187108546:security-group/sg-0b7295be0ad0db6ad",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b7295be0ad0db6ad",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e4918e7ac9a12e07"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20220501152542929700000003",
            "name_prefix": "terraform-",
            "owner_id": "366187108546",
            "revoke_rules_on_delete": false,
            "tags": {
              "archUUID": "c3cbd410-a565-4d33-bfd0-4e81e45e61f7",
              "env": "Production"
            },
            "tags_all": {
              "archUUID": "c3cbd410-a565-4d33-bfd0-4e81e45e61f7",
              "env": "Production"
            },
            "timeouts": null,
            "vpc_id": "vpc-c677fead"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws_security_group_13",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:366187108546:security-group/sg-060203cbd3cdfd4b7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-060203cbd3cdfd4b7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220501152542932400000007",
            "name_prefix": "terraform-",
            "owner_id": "366187108546",
            "revoke_rules_on_delete": false,
            "tags": {
              "archUUID": "c3cbd410-a565-4d33-bfd0-4e81e45e61f7",
              "env": "Production"
            },
            "tags_all": {
              "archUUID": "c3cbd410-a565-4d33-bfd0-4e81e45e61f7",
              "env": "Production"
            },
            "timeouts": null,
            "vpc_id": "vpc-c677fead"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws_security_group_19",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:366187108546:security-group/sg-0e4918e7ac9a12e07",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e4918e7ac9a12e07",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-060203cbd3cdfd4b7"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220501152542919500000002",
            "name_prefix": "terraform-",
            "owner_id": "366187108546",
            "revoke_rules_on_delete": false,
            "tags": {
              "archUUID": "c3cbd410-a565-4d33-bfd0-4e81e45e61f7",
              "env": "Production"
            },
            "tags_all": {
              "archUUID": "c3cbd410-a565-4d33-bfd0-4e81e45e61f7",
              "env": "Production"
            },
            "timeouts": null,
            "vpc_id": "vpc-c677fead"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws_security_group_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:366187108546:security-group/sg-001db4e6d33fb4ae7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-001db4e6d33fb4ae7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220501152542917200000001",
            "name_prefix": "terraform-",
            "owner_id": "366187108546",
            "revoke_rules_on_delete": false,
            "tags": {
              "archUUID": "c3cbd410-a565-4d33-bfd0-4e81e45e61f7",
              "env": "Production"
            },
            "tags_all": {
              "archUUID": "c3cbd410-a565-4d33-bfd0-4e81e45e61f7",
              "env": "Production"
            },
            "timeouts": null,
            "vpc_id": "vpc-c677fead"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws_security_group_8",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:366187108546:security-group/sg-09252c863360995a9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09252c863360995a9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-001db4e6d33fb4ae7"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220501152542929900000004",
            "name_prefix": "terraform-",
            "owner_id": "366187108546",
            "revoke_rules_on_delete": false,
            "tags": {
              "archUUID": "c3cbd410-a565-4d33-bfd0-4e81e45e61f7",
              "env": "Production"
            },
            "tags_all": {
              "archUUID": "c3cbd410-a565-4d33-bfd0-4e81e45e61f7",
              "env": "Production"
            },
            "timeouts": null,
            "vpc_id": "vpc-c677fead"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aws_security_group_rule_10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1594201581",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09252c863360995a9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aws_security_group_8"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aws_security_group_rule_12",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-96055983",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b7295be0ad0db6ad",
            "self": false,
            "source_security_group_id": "sg-0e4918e7ac9a12e07",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aws_security_group_11",
            "aws_security_group.aws_security_group_19"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aws_security_group_rule_14",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-2913850196",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-060203cbd3cdfd4b7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aws_security_group_13"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aws_security_group_rule_15",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-1731122273",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-060203cbd3cdfd4b7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aws_security_group_13"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aws_security_group_rule_16",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3813402425",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-060203cbd3cdfd4b7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aws_security_group_13"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aws_security_group_rule_20",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3917369357",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b7295be0ad0db6ad",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aws_security_group_11"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aws_security_group_rule_21",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 80,
            "id": "sgrule-753898523",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e4918e7ac9a12e07",
            "self": false,
            "source_security_group_id": "sg-060203cbd3cdfd4b7",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aws_security_group_13",
            "aws_security_group.aws_security_group_19"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aws_security_group_rule_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-987016338",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0e4918e7ac9a12e07",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aws_security_group_19"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aws_security_group_rule_5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1753286043",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-001db4e6d33fb4ae7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aws_security_group_4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aws_security_group_rule_6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-1157410093",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-001db4e6d33fb4ae7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aws_security_group_4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aws_security_group_rule_7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3925222927",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-001db4e6d33fb4ae7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aws_security_group_4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aws_security_group_rule_9",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1302408509",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09252c863360995a9",
            "self": false,
            "source_security_group_id": "sg-001db4e6d33fb4ae7",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aws_security_group_4",
            "aws_security_group.aws_security_group_8"
          ]
        }
      ]
    }
  ]
}